--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+spring.profiles.active: dev
 spring.devtools.remote.secret: mysecret
 server:
   port: 8080
@@ -25,3 +26,6 @@ amazon:
   dynamodb:
     endpoint: http://localhost:8000/
     region: localhost
+
+spring.redis.host: localhost
+spring.redis.port: 6379
