Added pythia properties by spring externalized conf; added env variables into yaml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,11 @@ spring.devtools.remote.secret: mysecret
 server:
   port: 8080
 
+pythia:
+  pythia-path: ${PYTHIA_PATH}
+  model-dir: ${MODEL_DIR}
+  pythia-runner: ${PYTHIA_RUNNER}
+
 #TODO: figure out why I need this here and in bootstrap.yml
 spring:
   application:
